@@ -24,6 +24,7 @@
 		<script type="text/javascript" src="js/buildings/training_facility.js"></script>
 		<script type="text/javascript" src="js/buildings/training_facility2.js"></script>
 		<script type="text/javascript" src="js/buildings/assembly_plant.js"></script>
+		<script type="text/javascript" src="js/buildings/assembly_plant2.js"></script>
 		<script type="text/javascript" src="js/buildings/camera_tower.js"></script>
 		<script type="text/javascript" src="js/buildings/taelon_mine.js"></script>
 		<script type="text/javascript" src="js/buildings/water_well.js"></script>
